[gd_scene load_steps=34 format=3 uid="uid://bdcen5gbyxxgq"]

[ext_resource type="Shader" path="res://Scripts/monitor_ui.gdshader" id="1_8jurb"]
[ext_resource type="Texture2D" uid="uid://bhio78r1mh0a7" path="res://Assets/Cams/Kebabia/MTNoCows.png" id="2_a0uii"]
[ext_resource type="Texture2D" uid="uid://dt8bhl5tu50ac" path="res://Assets/Cams/Kebabia/KBNoKing.png" id="2_musx2"]
[ext_resource type="Script" path="res://Scripts/camera_ui.gd" id="2_rvkx4"]
[ext_resource type="Script" path="res://Scripts/Animatronics.gd" id="3_5vquk"]
[ext_resource type="Texture2D" uid="uid://bdp68hossjcfp" path="res://Assets/Cams/Kebabia/KB1King.png" id="3_k44iv"]
[ext_resource type="Texture2D" uid="uid://d0bbtijm8n7va" path="res://Assets/Cams/Kebabia/MT1Cow.png" id="3_ne7v4"]
[ext_resource type="Texture2D" uid="uid://cqwltpb3mcy4h" path="res://Assets/Cams/Kebabia/KB2King.png" id="4_smlhp"]
[ext_resource type="Texture2D" uid="uid://cfmkau0o8mhx8" path="res://Assets/Cams/Kebabia/MT2Cow.png" id="4_yogo6"]
[ext_resource type="Texture2D" uid="uid://cqcu3rl3lpamv" path="res://Assets/Cams/Kebabia/MT3Cow.png" id="5_m5c75"]
[ext_resource type="Texture2D" uid="uid://b0qo5v7ewgyed" path="res://Assets/Cams/Kebabia/KB3King.png" id="5_mgmn5"]
[ext_resource type="Texture2D" uid="uid://c2ls31fj30nsh" path="res://Assets/Cams/Kebabia/MT4Cow.png" id="6_j5e36"]
[ext_resource type="Texture2D" uid="uid://d1j14fa602yxq" path="res://Assets/Cams/Kebabia/MT5Cow.png" id="7_u3ex3"]
[ext_resource type="Texture2D" uid="uid://rhh0tt8wanay" path="res://Assets/Cams/Kebabia/MBNoMinion.png" id="12_tchxp"]
[ext_resource type="Texture2D" uid="uid://d3dbr4finr45o" path="res://Assets/Cams/Kebabia/MB1Minion.png" id="14_nco8e"]
[ext_resource type="Texture2D" uid="uid://sctv7i0kommo" path="res://Assets/Cams/Kebabia/MB2Minion.png" id="15_ev1ox"]
[ext_resource type="Texture2D" uid="uid://bt1uwmtfqra70" path="res://Assets/Cams/Kebabia/MB3Minion.png" id="16_nnir4"]
[ext_resource type="Texture2D" uid="uid://8ynx21lhdijl" path="res://Assets/Cams/PeaceTown/PTNoGrandmaster.png" id="17_sodx2"]
[ext_resource type="Texture2D" uid="uid://cy7edau7i7re1" path="res://Assets/Cams/PeaceTown/PT1Grandmaster.png" id="18_lyvq1"]
[ext_resource type="Texture2D" uid="uid://cmbxadaap8l3s" path="res://Assets/Cams/PeaceTown/PT2Grandmaster.png" id="19_lyqnq"]
[ext_resource type="AudioStream" uid="uid://5ojjihcvnnga" path="res://Assets/Audio/Clearing.wav" id="20_e1wjf"]
[ext_resource type="Texture2D" uid="uid://dr6u1n6pfd86q" path="res://Assets/Cams/MainTown/Cam01Nobody.png" id="20_leno1"]
[ext_resource type="Texture2D" uid="uid://if5v47xxj7pc" path="res://Assets/Cams/MainTown/Cam01King1.png" id="21_257r1"]
[ext_resource type="Texture2D" uid="uid://bits3m844gb3x" path="res://Assets/Cams/Snowfell/SFNobody.png" id="21_ochht"]
[ext_resource type="Texture2D" uid="uid://c6oqmrrt1ti0y" path="res://Assets/Cams/MainTown/Cam01King2.png" id="22_62qyt"]
[ext_resource type="Texture2D" uid="uid://b187lhf75r5l2" path="res://Assets/Cams/MainTown/Cam01KingMinion1.png" id="23_pse45"]
[ext_resource type="Texture2D" uid="uid://ds8dh0sfhtu4" path="res://Assets/Cams/MainTown/Cam01KingMinion2.png" id="24_k2j85"]
[ext_resource type="Texture2D" uid="uid://c0mrbanvjlunr" path="res://Assets/Cams/MainTown/Cam01Minion.png" id="25_4hrm6"]
[ext_resource type="Texture2D" uid="uid://c71ldhw7456um" path="res://Assets/Cams/MainTown/Cam02Nobody.png" id="28_rtwkr"]
[ext_resource type="Texture2D" uid="uid://bat54g01ra1dm" path="res://Assets/Cams/MainTown/Cam02Grandmaster1.png" id="29_tnd7t"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mfenu"]
shader = ExtResource("1_8jurb")
shader_parameter/amount = 40.0

[sub_resource type="Animation" id="Animation_0a3ny"]
resource_name = "CameraMove"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-178, 0), Vector2(-178, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e272t"]
_data = {
"CameraMove": SubResource("Animation_0a3ny")
}

[node name="camera_ui" type="Control"]
material = SubResource("ShaderMaterial_mfenu")
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_rvkx4")
metadata/CowCount = 0

[node name="Cameras" type="Control" parent="."]
use_parent_material = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_5vquk")

[node name="CowTimer" type="Timer" parent="Cameras"]
one_shot = true

[node name="MovementTimer" type="Timer" parent="Cameras"]
one_shot = true

[node name="MinionTimer" type="Timer" parent="Cameras"]
wait_time = 5.0
one_shot = true

[node name="KB" type="Control" parent="Cameras"]
use_parent_material = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="KB0King" type="Sprite2D" parent="Cameras/KB"]
use_parent_material = true
position = Vector2(91, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_musx2")

[node name="KB1King" type="Sprite2D" parent="Cameras/KB"]
visible = false
use_parent_material = true
position = Vector2(91, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_k44iv")

[node name="KB2King" type="Sprite2D" parent="Cameras/KB"]
visible = false
use_parent_material = true
position = Vector2(91, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_smlhp")

[node name="KB3King" type="Sprite2D" parent="Cameras/KB"]
visible = false
use_parent_material = true
position = Vector2(91, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_mgmn5")

[node name="MT" type="Control" parent="Cameras"]
visible = false
use_parent_material = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Mt0Cow" type="Sprite2D" parent="Cameras/MT"]
use_parent_material = true
position = Vector2(91, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_a0uii")

[node name="Mt1Cow" type="Sprite2D" parent="Cameras/MT"]
visible = false
use_parent_material = true
position = Vector2(91, 7.99998)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_ne7v4")

[node name="Mt2Cow" type="Sprite2D" parent="Cameras/MT"]
visible = false
use_parent_material = true
position = Vector2(91, 7.99998)
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_yogo6")

[node name="Mt3Cow" type="Sprite2D" parent="Cameras/MT"]
visible = false
use_parent_material = true
position = Vector2(91, 7.99998)
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_m5c75")

[node name="Mt4Cow" type="Sprite2D" parent="Cameras/MT"]
visible = false
use_parent_material = true
position = Vector2(91, 7.99998)
scale = Vector2(0.7, 0.7)
texture = ExtResource("6_j5e36")

[node name="Mt5Cow" type="Sprite2D" parent="Cameras/MT"]
visible = false
use_parent_material = true
position = Vector2(91, 7.99998)
scale = Vector2(0.7, 0.7)
texture = ExtResource("7_u3ex3")

[node name="MB" type="Control" parent="Cameras"]
visible = false
use_parent_material = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Mb0Minion" type="Sprite2D" parent="Cameras/MB"]
use_parent_material = true
position = Vector2(91, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("12_tchxp")

[node name="Mb1Minion" type="Sprite2D" parent="Cameras/MB"]
visible = false
use_parent_material = true
position = Vector2(91, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("14_nco8e")

[node name="Mb2Minion" type="Sprite2D" parent="Cameras/MB"]
visible = false
use_parent_material = true
position = Vector2(91, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("15_ev1ox")

[node name="Mb3Minion" type="Sprite2D" parent="Cameras/MB"]
visible = false
use_parent_material = true
position = Vector2(91, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("16_nnir4")

[node name="PT" type="Control" parent="Cameras"]
visible = false
use_parent_material = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PT0Grandmaster" type="Sprite2D" parent="Cameras/PT"]
use_parent_material = true
position = Vector2(91, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("17_sodx2")

[node name="PT1Grandmaster" type="Sprite2D" parent="Cameras/PT"]
visible = false
use_parent_material = true
position = Vector2(91, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("18_lyvq1")

[node name="PT2Grandmaster" type="Sprite2D" parent="Cameras/PT"]
visible = false
use_parent_material = true
position = Vector2(91, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("19_lyqnq")

[node name="SF" type="Control" parent="Cameras"]
visible = false
use_parent_material = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SF0Nullian" type="Sprite2D" parent="Cameras/SF"]
use_parent_material = true
position = Vector2(91, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("21_ochht")

[node name="CAM" type="Control" parent="Cameras"]
visible = false
use_parent_material = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Cam01Nobody" type="Sprite2D" parent="Cameras/CAM"]
use_parent_material = true
position = Vector2(91, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("20_leno1")

[node name="Cam01King1" type="Sprite2D" parent="Cameras/CAM"]
visible = false
use_parent_material = true
position = Vector2(91, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("21_257r1")

[node name="Cam01King2" type="Sprite2D" parent="Cameras/CAM"]
visible = false
use_parent_material = true
position = Vector2(91, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("22_62qyt")

[node name="Cam01KingMinion1" type="Sprite2D" parent="Cameras/CAM"]
visible = false
use_parent_material = true
position = Vector2(91, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("23_pse45")

[node name="Cam01KingMinion2" type="Sprite2D" parent="Cameras/CAM"]
visible = false
use_parent_material = true
position = Vector2(91, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("24_k2j85")

[node name="Cam01Minion" type="Sprite2D" parent="Cameras/CAM"]
visible = false
use_parent_material = true
position = Vector2(91, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("25_4hrm6")

[node name="CAM2" type="Control" parent="Cameras"]
visible = false
use_parent_material = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Cam02Nobody" type="Sprite2D" parent="Cameras/CAM2"]
use_parent_material = true
position = Vector2(91, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("28_rtwkr")

[node name="Cam02Grandmaster" type="Sprite2D" parent="Cameras/CAM2"]
visible = false
use_parent_material = true
position = Vector2(91, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("29_tnd7t")

[node name="CameraMove" type="AnimationPlayer" parent="Cameras"]
libraries = {
"": SubResource("AnimationLibrary_e272t")
}

[node name="ChangeCam" type="Button" parent="."]
layout_mode = 0
offset_left = 339.0
offset_top = 188.0
offset_right = 490.0
offset_bottom = 279.0
text = "Change Cam"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 264.0
offset_top = 188.0
offset_right = 325.0
offset_bottom = 280.0
text = "Exit"

[node name="Admin" type="Button" parent="."]
layout_mode = 0
offset_left = -517.0
offset_top = 189.0
offset_right = -422.0
offset_bottom = 281.0
text = "Clear lag"

[node name="ClearingLabel" type="Label" parent="Admin"]
visible = false
layout_mode = 0
offset_left = 3.0
offset_top = 99.0
offset_right = 142.0
offset_bottom = 125.0
text = "Clearing entities..."

[node name="ClearSound" type="AudioStreamPlayer" parent="Admin"]
stream = ExtResource("20_e1wjf")
volume_db = -10.0

[node name="LabelTimer" type="Timer" parent="Admin"]
wait_time = 2.0
one_shot = true

[connection signal="ClearCancelled" from="." to="Cameras" method="_on_camera_ui_clear_cancelled"]
[connection signal="ClearStart" from="." to="Cameras" method="_on_camera_ui_clear_start"]
[connection signal="KebabBlocked" from="." to="Cameras" method="_on_camera_ui_kebab_blocked"]
[connection signal="CowaBunga" from="Cameras" to="." method="_on_cameras_cowa_bunga"]
[connection signal="KebabyDoor" from="Cameras" to="." method="_on_cameras_kebaby_door"]
[connection signal="MinionBreak" from="Cameras" to="." method="_on_cameras_minion_break"]
[connection signal="timeout" from="Cameras/CowTimer" to="Cameras" method="_on_cow_timer_timeout"]
[connection signal="timeout" from="Cameras/MovementTimer" to="Cameras" method="_on_movement_timer_timeout"]
[connection signal="timeout" from="Cameras/MinionTimer" to="Cameras" method="_on_minion_timer_timeout"]
[connection signal="pressed" from="ChangeCam" to="." method="_on_change_cam_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Admin" to="." method="_on_admin_pressed"]
[connection signal="finished" from="Admin/ClearSound" to="." method="_on_clear_sound_finished"]
[connection signal="finished" from="Admin/ClearSound" to="Cameras" method="_on_clear_sound_finished"]
[connection signal="timeout" from="Admin/LabelTimer" to="." method="_on_label_timer_timeout"]
